# emex64

./: CMakeLists.txt  Makefile  README.md  emex64.nanorc
emex64asm/: CMakeLists.txt
emex64asm/src/: cmptok.c  code.c  compiler.c  diag.c  emit.c  label.c  macro.c  main.c  opcode.c  register.c  section.c
emex64ld/: CMakeLists.txt
emex64ld/src/: main.c
emex64lib/: CMakeLists.txt
emex64lib/include/emex64lib/: bitwalker.h  fdwalker.h
emex64lib/include/emex64lib/asm/: cmptok.h  code.h  compiler.h  diag.h  elf.h  emit.h  invocation.h  label.h  macro.h  opcode.h  options.h  register.h  section.h  type.h
emex64lib/include/emex64lib/c/: ASTUnit.h
emex64lib/include/emex64lib/linker/: elf.h
emex64lib/include/emex64lib/support/: bitwalker.h  diag.h  fdwalker.h  file.h  keyboard.h  likely.h  parser.h
emex64lib/include/emex64lib/vm/: core.h  machine.h  memory.h  mmio.h  mmu.h
emex64lib/include/emex64lib/vm/device/: 8042.h  display.h  iGPU.h  interrupt.h  mc.h  platform.h  rtc.h  timer.h  uart.h
emex64lib/include/emex64lib/vm/instruction/: alu.h  core.h  ctrl.h  data.h  instruction.h
emex64lib/src/asm/: cmptok.c  code.c  diag.c  elf.c  elf_emit.c  emit.c  invocation.c  label.c  macro.c  opcode.c  options.c  register.c  section.c
emex64lib/src/c/: ASTUnit.c
emex64lib/src/support/: bitwalker.c  diag.c  fdwalker.c  file.c  parser.c
emex64lib/src/vm/: core.c  machine.c  memory.c  mmio.c  mmu.c
emex64lib/src/vm/device/: 8042.c  display.c  display.m  iGPU.c  interrupt.c  mc.c  platform.c  rtc.c  timer.c  uart.c
emex64lib/src/vm/instruction/: alu.c  core.c  ctrl.c  data.c
emex64vm/: CMakeLists.txt
emex64vm/src/: core.c  machine.c  main.c  memory.c  mmio.c  mmu.c
emex64vm/src/device/: display.c  display.m  interrupt.c  mc.c  platform.c  timer.c  uart.c
emex64vm/src/instruction/: alu.c  core.c  ctrl.c  data.c
emexutils/src/: parser.c
include/emex64asm/: diag.h
include/emexutils/: parser.h
include/lautils/: object.h
tests/badapple/: Makefile
tests/badapple/src/: badapple.e64
tests/baminimal/: Makefile
tests/baminimal/src/: badapple.e64
tests/baspeed/: Makefile
tests/baspeed/src/: badapple.e64
tests/emex64OS/: Makefile
tests/emex64OS/src/: start.e64
tests/emexFirmware/: Makefile  emex64.e64ld
tests/emexFirmware/inc/: display.e64h  emex64.e64h  emex64.e64inc  interrupt.e64h  mc.e64h  mm.e64h  platform.e64h  regs.e64h  rtc.e64h  uart.e64h
tests/emexFirmware/src/: exc.e64  font.e64  gui.e64  interrupt.e64  mc.e64  mem.e64  pmm.e64  put.e64  rtc.e64  slab.e64  start.e64  string.e64  uart.e64
tests/hello/: Makefile
tests/hello/src/: start.e64
